# Lamapuit

./: .gitattributes  .gitignore  ANALYSIS_SCRIPTS_QUICK_START.md  ANDMED_SECTION_ENHANCEMENTS.md  ANDMED_SECTION_SUMMARY.md  APPENDIX_OPTION_B_VISUALIZATIONS.tex  AUGMENTATION_REFACTOR_RESULTS.md  BENCHMARK_SETUP_SUMMARY.md  BIBLIOGRAPHY_MAPPING.md  CHM_VARIANTS_GENERATION_GUIDE.md  CHM_VARIANTS_MODULE_USAGE.md  CHM_VARIANTS_QUICK_REFERENCE.md  CHM_VARIANT_BENCHMARK_FINAL_REPORT.md  CHM_VARIANT_BENCHMARK_V2_CORRECTED_ANALYSIS.md  CHM_VARIANT_BENCHMARK_V2_PROGRESS.md  CHM_VARIANT_BENCHMARK_WITH_MASKS_REPORT.md  CHM_VARIANT_EVALUATION_PLAN.md  CHM_VARIANT_VALIDATION_SET_REPORT.md  CITATION_KEY_REPLACEMENTS.md  CLAUDE.md  CLEANUP_CHECKLIST.md  CNN_INFERENCE_RESULTS.md  COMPOSITE_3BAND_ANALYSIS.md  COMPOSITE_4BAND_IMPROVED.md  COMPREHENSIVE_BENCHMARK_PLAN.md  COMPREHENSIVE_CRITIQUE.md  COMPREHENSIVE_METRICS_SUMMARY.md  CORRECTED_COMPOSITE_SUMMARY.md  Dockerfile  Dockerfile.gpu  EXPERIMENT_RESULTS.md  FINAL_DELIVERABLES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVED_SCRIPTS_SUMMARY.md  LABELING_TOOLS_GUIDE.md  LARGE_FOLDERS_DELETION_PLAN.md  LATEX_FIXES_SUMMARY.md  LAZ_POINT_DENSITY_REAL_ANALYSIS.md  LICENSE  MANUAL_MASK_EXPERIMENT_REPORT.md  (+66 more)
.claude/: settings.json
analysis/: comparison_summary.csv  model_search_v1_ranked_cv.csv  model_search_v1_ranked_test.csv  model_search_v2_ranked_all.csv  model_search_v2_ranked_s1.csv  model_search_v2_ranked_s2_completed.csv  model_search_v2_status.json
analysis_output/: ANALYSIS_SUMMARY.md  COMPREHENSIVE_ANALYSIS_REPORT.json  LIDAR_DENSITY_REPORT.md  class_distribution_results.json  data_validation_report.json  laz_density_analysis.json  lidar_density_analysis.json  pointcloud_density_statistics.json
classical_cdw_detect/: environment.yml
configs/: default.yaml
docker/: Dockerfile.gpu  build_and_run_gpu.sh  environment.gpu.yml
docs/: DATA_COLLECTION_STRATEGY.md  LABEL_STUDIO_SETUP.md  MULTIRUN_TRAINING_GUIDE.md  MULTIRUN_TRAINING_UPDATES.md  THESIS_DROP13_FILTERED_CHM_PIPELINE.md  TRAINING_ANALYSIS.md  TRAINING_DATA_SETUP.md  cdw_experiments_436646_runbook.md  chm_dataset_summary_consolidated_2026-04-16.json  chm_registry_workflow.md  cluster_metrics.md  kokkuvotted_index.md  laz_classifier_research_northern_europe.md  model_search_and_v2_review_2026-04-07.md  model_search_v2.md  model_search_v2_results_analysis_template.md  model_search_v3_priorities.md  model_search_v3_run_2026-04-10.md  models_training.md
examples/: README.md  annotation_examples.md
labeler/: __init__.py  main.py  orthophoto.py  predictor.py  queue.py  renderer.py  temporal.py  tile_index.py
manual_masks_lineaware_browser/: 401675_2022_madal_gauss_1280_1280_cam.npy  401675_2022_madal_gauss_1280_1280_manual_label_meta.json  401675_2022_madal_gauss_1280_1280_mask.npy  401675_2022_madal_gauss_1280_1280_neg.npy
models/: MODEL_REGISTRY.md
prototypes/: preannotation_converter.py  sam_demo_orchestrator.py
scripts/: ANALYSIS_README.md  CHM_ABLATION_EXPERIMENT.md  __init__.py  _resave_pt.py  analysis_class_distribution.py  analysis_comprehensive_report.py  analysis_data_validation.py  analysis_lidar_density.py  analysis_pointcloud_density.py  analysis_spatial_split_validation.py  analysis_spatial_visualization.py  analyze_3runs.py  (+138 more)
(+554 files in other folders)
