[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdw-detect"
version = "0.1.0"
description = "Coarse Woody Debris Detection from LiDAR using Deep Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CDW Detection Team"}
]
keywords = ["lidar", "deep-learning", "yolo", "forestry", "coarse-woody-debris"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.24",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
cdw-detect = "cdw_detect.cli:main"

[project.urls]
Homepage = "https://github.com/taavip/cdw-detect"
Repository = "https://github.com/taavip/cdw-detect"
Issues = "https://github.com/taavip/cdw-detect/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
